[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cart-pole-rl"
version = "0.1.0"
description = "Learning reinforcement learning with Cart-Pole environment"
authors = [{name = "Learning Project"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control]",
    "numpy",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "utils", "visualization"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]
deep = [
    "torch",
    "tensorboard",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["cart_pole", "agents", "visualization", "utils"]
exclude = [".venv"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"