[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cart-pole-rl"
version = "0.1.0"
description = "Learning reinforcement learning with Cart-Pole environment"
authors = [{name = "Learning Project"}]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "gymnasium[classic-control]",
    "numpy",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "utils", "visualization"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]
deep = [
    "torch>=2.0.0",
    "tensorboard",
]
play = [
    "pygame",
]

[tool.pyright]
include = ["agents", "visualization", "utils"]
exclude = [".venv"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
